edit html (initialize code)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,118 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online Calculator</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="./main.js" defer></script>
 </head>
 <body>
-  
+  <section id="mainSection">
+    <div class="calcBox">
+
+      <div class="calcInput">
+        <p>
+          399
+        </p>
+      </div>
+
+      <div class="calcOperations">
+        <div class="calcButtonsBox">
+          <div class="buttonBox">
+            <button>
+              7
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              8
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              9
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              del
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              4
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              5
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              6
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              +
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              1
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              2
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              3
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              -
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              .
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              0
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              /
+            </button>
+          </div>
+          <div class="buttonBox">
+            <button>
+              x
+            </button>
+          </div>
+        </div>
+
+        <div class="calcButtonsBox2">
+          <div class="buttonBox2">
+            <button>
+              reset
+            </button>
+          </div>
+          <div class="buttonBox2">
+            <button>
+              =
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </body>
 </html>
