--- a/index.html
+++ b/index.html
@@ -11,91 +11,87 @@
   <section id="mainSection">
     <div class="calcBox">
 
-      <div class="calcInput">
-        <p>
-          399
-        </p>
-      </div>
+      <div class="calcInput"></div>
 
       <div class="calcOperations">
         <div class="calcButtonsBox">
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               7
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               8
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               9
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="deleteButton">
               del
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               4
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               5
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               6
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="plusButton">
               +
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               1
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               2
-            </button>
+            </button class="numberButton">
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               3
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="minusButton">
               -
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               .
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="numberButton">
               0
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="divideButton">
               /
             </button>
           </div>
           <div class="buttonBox">
-            <button>
+            <button class="multiplyButton">
               x
             </button>
           </div>
@@ -103,12 +99,12 @@
 
         <div class="calcButtonsBox2">
           <div class="buttonBox2">
-            <button>
+            <button class="resetButton">
               reset
             </button>
           </div>
           <div class="buttonBox2">
-            <button>
+            <button class="equalButton">
               =
             </button>
           </div>
